--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "pnpm": ">=9.0.0"
   },
   "scripts": {
+    "start": "tsx scripts/start-dev.ts",
     "dev": "turbo run dev",
     "build": "turbo run build",
     "lint": "turbo run lint",
@@ -26,6 +27,7 @@
     "db:studio": "turbo run db:studio --filter=@nexusgen/database"
   },
   "devDependencies": {
+    "tsx": "^4.19.0",
     "turbo": "^2.3.3",
     "typescript": "^5.7.2",
     "prettier": "^3.4.2",
