--- a/apps/worker/package.json
+++ b/apps/worker/package.json
@@ -25,14 +25,15 @@
     "@nestjs/common": "^10.3.3",
     "@nestjs/config": "^3.2.0",
     "@nestjs/core": "^10.3.3",
+    "@nestjs/event-emitter": "^3.0.1",
     "@nestjs/platform-express": "^10.3.3",
     "@nestjs/platform-socket.io": "^10.3.3",
     "@nestjs/swagger": "^7.3.0",
     "@nestjs/websockets": "^10.3.3",
     "@nexusgen/ai": "workspace:*",
     "@nexusgen/types": "workspace:*",
-    "ai": "^4.0.30",
     "@prisma/client": "^5.10.2",
+    "ai": "^4.0.30",
     "bullmq": "^5.4.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
