--- a/packages/ai/package.json
+++ b/packages/ai/package.json
@@ -35,8 +35,8 @@
     "@ai-sdk/anthropic": "^1.0.7",
     "@ai-sdk/google": "^1.0.14",
     "@ai-sdk/openai": "^1.0.13",
-    "@anthropic-ai/sdk": "^0.39.0",
     "ai": "^4.0.30",
+    "openai": "^6.16.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
