--- a/packages/ai/tsconfig.json
+++ b/packages/ai/tsconfig.json
@@ -5,8 +5,9 @@
     "rootDir": "./src",
     "declaration": true,
     "declarationMap": true,
-    "composite": true
+    "composite": false,
+    "incremental": false
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*.ts", "src/**/*.tsx"],
   "exclude": ["node_modules", "dist"]
 }
