--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -6,8 +6,9 @@
     "jsx": "react-jsx",
     "declaration": true,
     "declarationMap": true,
-    "composite": true
+    "composite": false,
+    "incremental": false
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*.ts", "src/**/*.tsx"],
   "exclude": ["node_modules", "dist"]
 }
