--- a/packages/utils/tsconfig.json
+++ b/packages/utils/tsconfig.json
@@ -8,6 +8,6 @@
     "composite": false,
     "incremental": false
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*.ts", "src/**/*.tsx"],
   "exclude": ["node_modules", "dist"]
 }
